# GameLab3

./: .gitignore  .gitmodules  README.md
builds/game/Assets/: Defines.txt
builds/game/Assets/Dungeons/: Dungeon_2.txt  Dungeon_4.txt
builds/game_v0.1/Assets/Dungeons/: Dungeon_x.txt
builds/game_v0.2/Assets/: Defines.txt  Prüfer_Defines.txt
builds/game_v0.2/Assets/Dungeons/: Dungeon_1.txt  Dungeon_2.txt  Dungeon_3.txt
code/: CMakeLists.txt
code/engine/include/: BaseException.h  BoxCollider.h  CollisionSystem.h  ComponentArray.h  CrashHandler.h  ECSSystem.h  Engine.h  EntityManager.h  EntityUtility.h  FileSystem.h  GameEventHolder.h  GameEventSystem.h  GameEvents.h  GameObjectManager.h  GlobalGameEvents.h  InputSystem.h  MeshRenderer.h  Miscellaneous.h  OldEntity.h  RenderSystem.h  Scene.h  SceneManager.h  System.h  SystemManager.h  Systems.h  TimeManager.h  Transform.h
code/engine/include/ECS/: Collision.h  ComponentArray.h  ComponentManager.h  Entity.h  EntityManager.h  System.h  SystemManager.h
code/engine/include/InputSystem/: GamepadAxis.h  GamepadButton.h  GamepadInputID.h  InputAction.h  InputActionButton.h  InputActionVec2.h  InputSystem.h
code/engine/src/: BaseException.cpp  CollisionSystem.cpp  CrashHandler.cpp  ECSException.cpp  Engine.h  FileSystem.cpp  FileSystem.h  InputSystem.cpp  InputSystem.h  Miscellaneous.cpp  Scene.cpp  SceneManager.cpp  TimeManager.cpp  main.cpp
code/engine/src/ECS/: Collision.cpp  ComponentManager.cpp  ECSSystem.cpp  EntityManager.cpp  Transform.cpp  (+4 more)
code/game/: CMakeLists.txt
code/game/Assets/: Defines.txt
code/game/Assets/DefinitelyNotHighscore/LikeLiterallyNoHighscoresHere/WhatEvenAreHighscores/DontContinue/YouHaveBeenWarned/highscores/: highscores.txt
code/game/Assets/Dungeons/: Dungeon_0.txt  Dungeon_1.txt  Dungeon_2.txt  Dungeon_3.txt  Dungeon_4.txt  Dungeon_x.txt
code/game/Assets/Graphics/Models/: Assi.glb  Bullet.glb  Bullet_Cuball.glb  Cuball.glb  Duke.glb  Hubertus.glb  Jewel_1.glb  Jewel_4.glb  KindredSpirits.glb  Player.glb  Selector.glb  Wall.glb
code/game/Assets/Graphics/Models/Assi/: Assi.blend  Assi.blend1  Assi.glb
code/game/Assets/Graphics/Models/BreakableWall/: BreakableWall.blend
code/game/Assets/Graphics/Models/Bullet/: Bullet.blend  Bullet.blend1  Bullet.glb
code/game/Assets/Graphics/Models/Cuball/: Cuball.blend  Cuball.blend1  Cuball.glb  Cuball.gltf
code/game/Assets/Graphics/Models/Debug/: Debug.glb
code/game/Assets/Graphics/Models/Elevator/: Elevator.blend  Elevator.blend1  Elevator.glb
code/game/Assets/Graphics/Models/Hubertus/: Hubertus.blend  Hubertus.blend1  Hubertus.glb
code/game/Assets/Graphics/Models/Jewel/: Jewel.blend  Jewel.blend1  Jewel.glb
code/game/Assets/Graphics/Models/Player/: Player.blend  Player.blend1  Player.glb
code/game/Assets/Graphics/Models/Wall/: Wall.blend
code/game/Assets/Shaders/Default/: FS_Default.frag  VS_Default.vert
code/game/Assets/Shaders/Default/glTF-Sample-Viewer-main/: pbr.frag  readme.txt
code/game/Assets/Shaders/Lit_VertexAttribute/: FS_Lit_NoAlpha.frag
code/game/_Assets/Graphics/Models/Cuball/: Cuball.blend  Cuball.blend1
code/game/_Assets/Graphics/Models/Elevator/: Elevator.blend
code/game/_Assets/Graphics/Models/Hubertus/: Hubertus.blend1
code/game/_Assets/Graphics/Models/Jewel/: Jewel.blend  Jewel.blend1
code/game/_Assets/Graphics/Models/Player/: Player.blend1
code/game/_Assets/Graphics/Models/Wall/: Wall.blend1
code/game/_Assets/Models/: Lightstage.blend  Lightstage.blend1
code/game/_Assets/Models/Assi/: Assi.blend  Assi.blend1
code/game/_Assets/Models/Bullet/: Bullet.blend  Bullet.blend1
code/game/_Assets/Models/Bullet_Cuball/: Bullet_Cuball.blend  Bullet_Cuball.blend1
code/game/_Assets/Models/Bullet_Enemy/: Bullet_Enemy.blend  Bullet_Enemy.blend1
code/game/_Assets/Models/Cuball/: Cuball.blend  Cuball.blend1
code/game/_Assets/Models/Debug/: Debug.blend  Debug.blend1
code/game/_Assets/Models/Duke/: Duke.blend  Duke.blend1
code/game/_Assets/Models/Elevator/: Elevator.blend1
code/game/_Assets/Models/Hubertus/: Hubertus.blend  Hubertus.blend1  Hubertus.glb
code/game/_Assets/Models/Jewel/: Gems.blend
code/game/_Assets/Models/KindredSpirits/: KindredSpirits.blend  KindredSpirits.blend1
code/game/_Assets/Models/Player/: Crock.blend  Crock.blend1  Player.blend  Player.blend1
code/game/_Assets/Models/Selector/: Selector.blend
code/game/include/: CollisionLayer.h  Dungeon.h  ECSExtension.h  ECSHelper.h  Entity.h  GameDefines.h  GameObject.h  GameObjectManager.h  HighScore.h  HighScoreManager.h  Keyboard.h  Miscellaneous.h  OldDungeon.h  Player.h  Systems.h
code/game/include/Components/: BreakableWall.h  Bullet.h  Destroyable.h  Dungeon.h  Elevator.h  EnemyBehaviour.h  Health.h  Loot.h  PlayerController.h
code/game/include/Components/Enemies/: Assi.h  Cuball.h  Duke.h  EnemyBehaviour.h  Hubertus.h  KindredSpirit.h
code/game/include/Helpers/: AssiExtra.h  CuballExtra.h  DukeExtra.h  EnemyExtra.h  EnemySpawnerData.h  KindredSpiritExtra.h  Movement.h
code/game/include/Scenes/: 01_TitleScreen.h  02_Game.h  03_GameWin.h  04_GameLost.h
code/game/include/Systems/: AssiSystem.h  BreakableWallSystem.h  BulletSystem.h  CuballSystem.h  DestroyerSystem.h  DukeSystem.h  DungeonEnemySystem.h  DungeonSystem.h  ElevatorSystem.h  EnemyBehaviourSystem.h  HubertusSystem.h  KindredSpiritSystem.h  PlayerControllerSystem.h
code/game/src/: Dungeon.cpp  ECSHelper.cpp  GameDefines.cpp  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GlobalGameEvents.cpp  HighScore.cpp  HighScoreManager.cpp  Keyboard.cpp  Miscellaneous.cpp  Player.cpp  Systems.cpp  main.cpp
code/game/src/Components/: Dungeon.cpp  PlayerController.cpp
code/game/src/Scenes/: 01_TitleScreen.cpp  02_Game.cpp  03_GameWin.cpp  04_GameLost.cpp
code/game/src/Systems/: AssiSystem.cpp  BreakableWallSystem.cpp  BulletSystem.cpp  CuballSystem.cpp  DestroyerSystem.cpp  DukeSystem.cpp  DungeonEnemySystem.cpp  DungeonSystem.cpp  ElevatorSystem.cpp  EnemyBehaviourSystem.cpp  HubertusSystem.cpp  KindredSpiritSystem.cpp  PlayerControllerSystem.cpp
(+101 files in other folders)
